[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "logging>=0.4.9.6",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "selenium>=4.29.0",
    "streamlit>=1.42.2",
    "trafilatura>=2.0.0",
    "twilio>=9.4.6",
    "urllib3>=2.3.0",
    "webdriver-manager>=4.0.2",
]
